--- a/slack.html
+++ b/slack.html
@@ -79,11 +79,55 @@
 
         <div class="container-2">
             <div class="container-2-video">
-        <video class="container-video" src="https://a.slack-edge.com/9436a9f/marketing/img/homepage/e2e-prospects/animations/webm/hero-product-ui.es-ES.webm"></video>
+        <video class="container-video"> 
+            <source src="https://a.slack-edge.com/9436a9f/marketing/img/homepage/e2e-prospects/animations/webm/hero-product-ui.es-ES.webm">
+        </video>
             </div>
         </div>
 
     </div>
+
+    <div class="container-0-separator">
+
+        <div class="container-0-separator-sub">
+            <p>EMPRESAS DE TODO EL MUNDO YA CONFÍAN EN SLACK</p>
+        </div>
+    </div>
+
+    
+
+    <div class="container-logotips-empresas">
+            <img class="logotips-icon" src="/FULL-STACK/HTML-CSS/EXC-SLACK/airbnb.png" alt="airbnb">
+            <img class="logotips-icon" src="/FULL-STACK/HTML-CSS/EXC-SLACK/nasa.png" alt="nasa">
+            <img class="logotips-icon" src="/FULL-STACK/HTML-CSS/EXC-SLACK/uber.png" alt="">
+            <img class="logotips-icon" src="https://a.slack-edge.com/80588/marketing/img/logos/company/_color/target-logo@2x.png" alt="rodo">
+            <img class="logotips-icon" src="/FULL-STACK/HTML-CSS/EXC-SLACK/tnyt.png" alt="new-york">
+            <img class="logotips-icon" src="/FULL-STACK/HTML-CSS/EXC-SLACK/etsy.png" alt="etsy">
+     </div>
+
+    <div class="container-2-video-text">
+        <div class="container-2-video">
+            <video class="video-src">
+               <source src="https://a.slack-edge.com/445abcc/marketing/img/homepage/e2e-prospects/animations/webm/connectedness.es-ES.webm" type="video/webm">
+            </video> 
+        </div>
+
+        <div class="container-2-text">
+            <div class="container-text-sub">
+                <div>
+                    <h2>Reúne a tu equipo</h2>
+                </div>
+                <div>
+                    <p>Los canales son el corazón de Slack. Son espacios organizados para todo el mundo que contienen todo lo necesario para trabajar. Los canales permiten conectarse entre departamentos, oficinas, zonas horarias e incluso con otras empresas.</p>
+                </div>
+                <div>
+                    <a href="#">Obtener más información sobre los canales</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+ 
 
 
 
